dalsza czesc prac

--- a/index.html
+++ b/index.html
@@ -38,38 +38,69 @@
             <h1 class="main-h1">Prezentacja <br> Spółki BuildPrem</h1>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
+        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="services">
+            <div class="col-12 col-md-10">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">O nas</h2>
+                    <h2 class="display-3 mb-5">O NAS</h2>
+                </div>
+                <div class="row text-center justify-content-around p-0 m-0">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-thumbs-up fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Jakość</h4>
+                        <p class="text-muted">Świadczymy wysokiej klasy usługi budowlane dla
+                            deweloperów, instytucji publicznych i inwestorów
+                            indywidualnych poprzez kompleksowe
+                            przygotowanie i realizację projektów. </p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-smile fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Satysfakcja</h4>
+                        <p class="text-muted">Celem BuildPrem jest wykreowanie marki na rynku
+                            usług budowlanych, która dzięki zachowaniu
+                            wysokich standardów podczas całego procesu
+                            inwestycyjnego zapewni satysfakcję Klientów.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-search-plus fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Precyzja wykonania</h4>
+                        <p class="text-muted">W oczach specjalistów z BuildPrem detale i szczegóły pełnią bardzo ważną funkcję w każdym z projektów.
+                            Dzięki zastosowaniu specjalistycznych narzędzi każdy projekt może być przeprowadzony dokładnie i precyzyjnie.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="profilDz">
+            <div class="profilImg"></div>
+            <div class="col-12 col-md-10">
+                <div class="text-center text-md-right mt-4 justify-content-end row p-0 m-0">
+                    <div class="display-3 mb-5 profilTexth2 mr-5 mt-5">Profil  działalności</div>
+                </div>
+                <div class="row p-0 m-0">
+                    <div class=" p-0 m-0 col-6">
+                        <ul class="profilUl ml-5">
+                            <li>Prace wykończeniowe</li>
+                            <li>Instalacje elektryczne</li>
+                            <li>Instalacje hydrauliczne</li>
+                            <li>Instalacje teletechniczne</li>
+                            <li>Termoizolacja budynków</li>
+                        </ul>
+                    </div>
+                    <div class="col-6 profilUlRightImg">
+1
+                    </div>
+                </div>
 
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                </div>
+
             </div>
         </section>
         <!-- Portfolio Grid-->
