--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead">
+        <header class="masthead w-100">
             <h1 class="main-h1">Prezentacja <br> Spółki BuildPrem</h1>
         </header>
         <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="aboutUs">
             <div class="col-12 col-md-10">
                 <div class="text-center">
                     <div class="text-center text-md-right mt-4 justify-content-center row p-0 m-0">
-                        <div class="display-3 mb-5  abUsHeader mr-5 mt-5 headerColor">O NAS</div>
+                        <div class="display-3 abUsHeader mb-5 mr-md-5 mt-md-5 headerColor ">O NAS</div>
                     </div>
                 </div>
                 <div class="row text-center justify-content-around p-0 m-0">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-mb-0 mb-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-thumbs-up fa-stack-1x fa-inverse"></i>
@@ -74,15 +74,15 @@
                 </div>
             </div>
         </section>
-        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5 profilDiv" >
+        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-md-5 profilDiv" >
             <div class="profilImg"></div>
             <div class="col-12 col-md-10">
                 <div class="text-center text-md-right mt-4 justify-content-end row p-0 m-0">
-                    <div class="display-3 mb-5 profilTexth2 mr-5 mt-5 headerColor">PROFIL DZIAŁALNOŚCI</div>
+                    <div class="display-3 mb-md-5 profilTexth2 mr-md-5 mt-md-5 headerColor headerUni">PROFIL DZIAŁALNOŚCI</div>
                 </div>
                 <div class="row p-0 m-0">
-                    <div class=" p-0 m-0 col-6">
-                        <ul class="profilUl ml-5">
+                    <div class=" p-0 m-0 col-12 col-md-6 mt-3 mt-md-0">
+                        <ul class="profilUl ml-md-5 text-md-left text-center p-0 pl-md-4">
                             <li>Prace wykończeniowe</li>
                             <li>Instalacje elektryczne</li>
                             <li>Instalacje hydrauliczne</li>
@@ -90,19 +90,21 @@
                             <li>Termoizolacja budynków</li>
                         </ul>
                     </div>
-                    <div class="col-6 profilUlRightImg"></div>
+                    <div class="col-6 profilUlRightImg d-none d-md-block"></div>
                 </div>
             </div>
         </section>
-        <section class="page-section row p-0 justify-content-center wyrDiv mb-0 pb-5" id="profilDz">
+
+        <section class="page-section row p-0 justify-content-center wyrDiv" id="profilDz">
             <div class="col-12 col-md-10 row p-0 m-0 justify-content-around">
-                <div class="mt-4 row p-0 m-0 align-items-start col-5">
-                    <div class="display-3 mb-5 profilTexth2 mr-5 mt-5 headerColor">CO NAS WYRÓŻNIA?</div>
+                <div class="mt-4 row align-items-md-start col-md-5 col-12 m-0 text-center justify-content-center">
+                    <div class="display-3 mb-md-5 profilTexth2 mr-md-5 mt-md-5 headerColor headerUni mr-2 ml-2">CO NAS WYRÓŻNIA?
+                    </div>
                 </div>
-                <div class="col-2">
+                <div class="col-2 d-none d-md-block">
                     <div class="wyrImg h-100"></div>
                 </div>
-                <div class="row p-0 m-0 col-3">
+                <div class="row m-0 p-md-0 p-4 col-md-3 col-12 text-md-left text-center">
                     <div class="wyrItem">
                         <b>WYKWALIFIKOWANA</b> KADRA
                         Z MIĘDZYNARODOWYM
@@ -121,13 +123,13 @@
                 </div>
             </div>
         </section>
-        <section class="pt-0 mt-5" id="kontakt">
+        <section class="pt-0 pt-md-5 mt-md-5" id="kontakt">
             <div class="footer">
-                <div class="strategyDiv">
-                    <div class="mt-4 row p-0 m-0 justify-content-end mr-5">
-                        <div class="display-3 mb-5 profilTexth2 mr-5 mt-5 headerColor">STRATEGIA 2020-2025</div>
+                <div class="strategyDiv mb-md-0 mb-5 ">
+                    <div class="mt-4 row p-0 m-0 justify-content-md-end mr-md-5 justify-content-center">
+                        <div class="display-3 mb-md-5 profilTexth2 mr-md-5 mt-md-5 headerColor headerUni mr-2 ml-2">STRATEGIA <br class="d-block d-md-none"> 2020-2025</div>
                     </div>
-                    <div class="col-7 strategyText headerColor">
+                    <div class="col-md-7 strategyText headerColor col-12">
                         W związku z planowaną ekspansją
                         BuildPrem poszukuje Klientów w
                         całej Europie.
@@ -136,15 +138,14 @@
                         relacji partnerskich, opartych na
                         wzajemnych korzyściach oraz
                         profesjonalnym podejściu.
-
                     </div>
                 </div>
-                <div class="contactDiv row p-0  justify-content-between">
-                    <div class="col-6 imgFooterDiv text-left">
-                        <img src="assets/img/logo.png" alt="123" class="img-fluid col-6"/>
+                <div class="contactDiv row p-md-0 justify-content-between">
+                    <div class="col-md-6 imgFooterDiv text-md-left text-center col-12">
+                        <img src="assets/img/logo.png" alt="123" class="img-fluid col-md-6 col-10"/>
                     </div>
-                    <div class="col-6 flex-column p-0 row align-content-end">
-                        <b class="mb-2">BuildPrem s.c.</b>
+                    <div class="col-md-6 col-12 flex-column p-md-0 row align-content-end m-0">
+                        <b class="mb-2 d-md-block d-none">BuildPrem s.c.</b>
                         <div><i class="fas fa-map-marker-alt"></i>
                             ul. Sikorskiego 10/5
                             62-200 Gniezno
