naprawa navbaru (kolorystyka przy collapsed)

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs">O nas</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#profilDz">CO NAS WYRÓŻNIA</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#kontakt">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs" style="color: var(--darkGrey)">O nas</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#profilDz" style="color: var(--darkGrey)">CO NAS WYRÓŻNIA</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#kontakt" style="color: var(--darkGrey)">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
