working on multilang

--- a/index.en.html
+++ b/index.en.html
@@ -23,11 +23,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs" style="color: var(--darkGrey)">O nas</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#profilDz" style="color: var(--darkGrey)">CO NAS WYRÓŻNIA</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#kontakt" style="color: var(--darkGrey)">Kontakt</a></li>
-                        <a href="./index.en.html" class="d-flex p-0 m-0">
-                            <img src="assets/img/united-kingdom.png" id="UKFlag" alt="UK flag" class="img-fluid flags align-self-center">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs" style="color: var(--darkGrey)">ABOUT US</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#profilDz" style="color: var(--darkGrey)">WHAT MAKES US UNIQUE</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#kontakt" style="color: var(--darkGrey)">CONTACT</a></li>
+                        <a href="./index.html" class="d-flex p-0 m-0 ">
+                            <img src="assets/img/poland.png" id="PLflag" alt="Poland flag" class="img-fluid flags align-self-center polandFlag">
                         </a>
                     </ul>
                 </div>
@@ -149,11 +149,10 @@
                     <div class="col-md-6 imgFooterDiv text-md-left text-center col-12">
                         <img src="assets/img/logo.png" alt="123" class="img-fluid col-md-6 col-10"/>
                     </div>
-                    <div class="col-md-6 col-12 flex-column p-md-0 row align-content-end m-0 p-0">
+                    <div class="col-md-6 col-12 flex-column p-md-0 row align-content-end m-0">
                         <b class="mb-2 d-md-block d-none">BuildPrem s.c.</b>
                         <div><i class="fas fa-map-marker-alt"></i>
                             ul. Sikorskiego 10/5
-
                             62-200 Gniezno
                             Polska</div>
                         <div><i class="fas fa-phone"></i>
@@ -166,8 +165,6 @@
                 </div>
             </div>
         </section>
-
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
