--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -13,7 +14,9 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/style2.css" rel="stylesheet" />
     </head>
+
     <body id="page-top">
+
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">BuildPrem</a>
@@ -33,9 +36,11 @@
                 </div>
             </div>
         </nav>
+
         <header class="masthead w-100">
             <h1 class="main-h1">Prezentacja <br> Spółki BuildPrem</h1>
         </header>
+
         <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="aboutUs">
             <div class="col-12 col-md-10">
                 <div class="text-center">
@@ -79,6 +84,7 @@
                 </div>
             </div>
         </section>
+
         <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-md-5 profilDiv" >
             <div class="profilImg"></div>
             <div class="col-12 col-md-10">
@@ -128,6 +134,7 @@
                 </div>
             </div>
         </section>
+
         <section class="pt-0 pt-md-5 mt-md-5 pb-3" id="kontakt">
             <div class="footer">
                 <div class="strategyDiv mb-md-0 mb-5 ">
@@ -151,26 +158,28 @@
                     </div>
                     <div class="col-md-6 col-12 flex-column p-md-0 row align-content-end m-0 p-0">
                         <b class="mb-2 d-md-block d-none">BuildPrem s.c.</b>
-                        <div><i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <i class="fas fa-map-marker-alt"></i>
                             ul. Sikorskiego 10/5
-
                             62-200 Gniezno
-                            Polska</div>
-                        <div><i class="fas fa-phone"></i>
+                            Polska
+                        </div>
+                        <div>
+                            <i class="fas fa-phone"></i>
                             +48 697 697 888</div>
-                        <div><i class="fas fa-envelope"></i>
-                            BuildPrem4@gmail.com</div>
+                        <div>
+                            <i class="fas fa-envelope"></i>
+                            BuildPrem4@gmail.com
+                        </div>
                     </div>
-
-
                 </div>
             </div>
         </section>
-
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="js/scripts.js"></script>
+
     </body>
 </html>
