--- a/index.en.html
+++ b/index.en.html
@@ -78,7 +78,7 @@
                             <i class="fas fa-search-plus fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 abUsH4">Precision of execution</h4>
-                        <p class="text-muted abUsP">In the eyes of BuildPr specialists, details and details play a very important role in each project.
+                        <p class="text-muted abUsP">In the eyes of BuildPrem specialists, details and details play a very important role in each project.
                             Thanks to the use of specialized tools, each project can be carried out accurately and precisely.
                         </p>
                     </div>
