--- a/index.en.html
+++ b/index.en.html
@@ -36,7 +36,7 @@
         </nav>
 
         <header class="masthead w-100">
-            <h1 class="main-h1">Company <br> Presentation</h1>
+            <h1 class="main-h1-2 main-h1">Company <br> Presentation</h1>
         </header>
 
         <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="aboutUs">
